[gd_scene load_steps=6 format=3 uid="uid://8442tv453kl7"]

[ext_resource type="Script" path="res://scripts/plantstem.gd" id="1_foa0p"]
[ext_resource type="Script" path="res://scripts/plantpath.gd" id="2_rlxye"]
[ext_resource type="Script" path="res://scripts/stemgrower.gd" id="3_5nt1y"]
[ext_resource type="Texture2D" uid="uid://oi8jmjexx8jk" path="res://textures/white_vine.png" id="3_eolli"]

[sub_resource type="Curve2D" id="Curve2D_cit1f"]

[node name="PlantStem" type="Node2D"]
position = Vector2(2.08165e-12, 2.08165e-12)
script = ExtResource("1_foa0p")

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
curve = SubResource("Curve2D_cit1f")
script = ExtResource("2_rlxye")

[node name="StemGrower" type="PathFollow2D" parent="Path2D"]
script = ExtResource("3_5nt1y")

[node name="StemPiece" type="Sprite2D" parent="Path2D/StemGrower"]
visible = false
texture = ExtResource("3_eolli")

[connection signal="spawnbranch" from="Path2D/StemGrower" to="." method="_on_stem_grower_spawnbranch"]
[connection signal="spawnleaf" from="Path2D/StemGrower" to="." method="_on_stem_grower_spawnleaf"]
[connection signal="spawnpiece" from="Path2D/StemGrower" to="." method="_on_stem_grower_spawnpiece"]
